--- a/AppBurse/Views/Users/Edit.cshtml
+++ b/AppBurse/Views/Users/Edit.cshtml
@@ -15,23 +15,13 @@
     <i class="glyphicon glyphicon-user"></i>
     @Html.Label("UserName", "Nume utilizator", new { @class = "" })
     <br />
-    @Html.EditorFor(m => m.UserName)
-    <br /><br />
-    <i class="glyphicon glyphicon-envelope"></i>
-    @Html.Label("Email", "Email utilizator", new { @class = "" })
-    <br />
-    @Html.EditorFor(m => m.Email)
-    <br /><br />
-    <i class="glyphicon glyphicon-phone"></i>
-    @Html.Label("PhoneNumber", "Numar telefon")
-    <br />
-    @Html.EditorFor(m => m.PhoneNumber)
+    @Html.DisplayFor(m => m.UserName)
     <br /><br />
     <i class="glyphicon glyphicon-th-list"></i>
     <label>Selectati rolul</label>
     @Html.DropDownList("newRole", new SelectList(Model.AllRoles, "Value", "Text", (string)ViewBag.userRole), null, new { @class = "form-control" })
     <br />
-    <button class="btn btn-sm btn-success" type="submit">Modifica datele utilizatorului</button>
+    <button class="btn btn-sm btn-success" type="submit">Modifica rolul utilizatorului</button>
 </form>
 
 
